--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="{{page.keywords}}">
     <meta name="description" content="{{page.description}}">
+    <meta property= og:image content={{page.social_media_img}} />
     <title>{{page.title}}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <!-- Google Font: -->
