--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -399,6 +399,13 @@ h2{
     color: white;
 }
 
+.fig-caption{
+    text-align: center;
+    font-style: italic;
+    font-size: 13px;
+
+}
+
 .MathJax_Display{
     background-color: #C84848;
     padding-top: 3%;
