--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
     <!-- Google icon: -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Canonical Domain -->
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 </head>
 
 <body>
