--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -355,6 +355,13 @@ h2{
     width: 70%;
 }
 
+.post-body .larger img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
 .conclusion-list{
     margin-left: 3%;
 }
