feed python bloggers

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -462,6 +462,12 @@ h2{
     justify-content: center;
 }
 
+
+
+.footer a{
+    margin-right: 10px;
+}
+
 .footer-content{
     margin-bottom: 3%;
     display: flex;
