--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -440,6 +440,11 @@ h2{
     padding-bottom: 3%;
 }
 
+.pic_attribution{
+    font-size: 10px;
+    text-align: left;
+}
+
 /*  Share buttons  */
 
 .share{
