--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,6 @@
 </body>
 <script src="/assets/js/copycode.js"></script>
 <script src="/assets/js/up.js"></script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-    type="text/javascript"></script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 </html>
