--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -888,3 +888,17 @@ h2{
     }
 
 }
+
+.videoWrapper{
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.videoWrapper iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
