--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -46,6 +46,13 @@ h2{
     line-height: 35px;
 }
 
+.pre-lesson{
+    font-size: 25px;
+    line-height: 35px;
+    font-family: 'Barlow Condensed', Helvetica, sans-serif;
+    margin-bottom: 10px;
+}
+
 /*  Header Styles   */
 .menu{
     background-color: white;
@@ -498,9 +505,9 @@ h2{
 }
 
 .MathJax_Display{
-    background-color: #C84848;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    background-color: #26282A;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .pic_attribution{
