--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- Structured data -->
+    {% if page.sd %}
+
+        {% include sd_content.html %}
+
+    {% endif %}
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2DKTESR2N"></script>
     <script>
