--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,13 +27,12 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    font-family: 'Montserrat', Helvetica, sans-serif;    
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
     line-height: 26px;
 }
 
 h1, h2{
-    font-family: 'Barlow Condensed', Helvetica, sans-serif;
 }
 
 h1{
@@ -49,7 +48,6 @@ h2{
 .pre-lesson{
     font-size: 25px;
     line-height: 35px;
-    font-family: 'Barlow Condensed', Helvetica, sans-serif;
     margin-bottom: 10px;
 }
 
@@ -105,7 +103,6 @@ h2{
 .header-nav a{
     text-decoration: none;
     color: #2E3031;
-    font-family: 'Barlow Condensed', Helvetica, sans-serif;
     font-size: 20px;
     text-transform: uppercase;
 }
@@ -242,7 +239,8 @@ h2{
 }
 
 .latest-updates h1{
-    font-weight: bold;
+    font-size: 28px;
+
 }
 
 .lessons-list{
@@ -283,6 +281,7 @@ h2{
     text-decoration: none;
     text-transform: uppercase;
     color: #C84848;
+    font-size: 22px;
 
 }
 
@@ -601,11 +600,9 @@ h2{
 
 #mc_embed_signup {
     max-width: 500px;
-    font: 12px 'Montserrat', Helvetica, sans-serif;  
 }
 
 #mc_embed_signup #mc_embed_signup_scroll h2{
-    font: 20px 'Montserrat', Helvetica, sans-serif;  
 }
 
 /*  Code Highlight Styles   */
@@ -646,7 +643,6 @@ h2{
     opacity: 0;
     transition: opacity 0.3s;
     font-size: 12px;
-    font-family: Helvetica, Arial, sans-serif;
   }
   
 .material-symbols-outlined .tooltiptext::after {
