--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
     <!-- Canonical Domain -->
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
     <link rel="icon" href="/favicon.png">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
