--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
     <link rel="icon" href="/favicon.png">
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta name='impact-site-verification' value='ca1c851b-2b22-4fb4-bdc9-3d4329b314c1'>
 </head>
 
 <body>
