--- a/_includes/comment-section.html
+++ b/_includes/comment-section.html
@@ -699,21 +699,21 @@
 	.comment-item small {
 		padding-left: 0.7em;
 		color: #999;
-		font-size: 0.8em;
+		font-size: 1em;
 	}
 	
 	.commenter-name {
 		color: #367588;
 		text-decoration: none;
 		font-size: 1em;
-		font-weight: 700;
+
 	}
 	
 	.commenter-name strong {
 		color: #e91e63;
 		text-decoration: none;
 		font-size: 1em;
-		font-weight: 700;
+
 	}
 	
 	{%- if comment_replies_enabled -%}
@@ -741,13 +741,13 @@
 	
 	.comemnt-reply-id {
 		color: #e91e63;
-		font-size: .9em;
+		font-size: 1em;
 		cursor: pointer;
 	}
 	
 	#comment-reply-info {
 		float: right;
-		font-size: .9em;
+		font-size: 1em;
 		color: #e91e63;
 		cursor: pointer;
 	}
@@ -758,7 +758,7 @@
 	
 	.comment-reply-clear {
 		color: #e91e63;
-		font-size: 1.1em;
+		font-size: 1em;
 		cursor: pointer;
 	}
 	{%- endif -%}
@@ -792,8 +792,7 @@
 		background: #C84848;
 		cursor: pointer;
 		color: #fff;
-		font-weight: bold;
-		font-size: 0.9em;
+		font-size: 1em;
 		text-transform: uppercase;
 		margin-bottom: 20px;
 		outline-style: none;
@@ -859,8 +858,11 @@
 		width: 50%;
 		padding: 10px;
 		border: 0;
-		background: #f7f7f7;
+		font-size: 1em;
+		background: #F2F2F2;
 		color: #2E3031;
+		border: 1px solid #E0E0E0;
+    	border-radius: 8px;
 	}
 	
 
@@ -891,7 +893,7 @@
 	#comment-recaptcha-disclaimer {
 		text-align: justify;
 		text-align-last: center;
-		font-size: .7em;
+		font-size: 1em;
 	}
 	{%- endif -%}
 	
@@ -909,7 +911,7 @@
 	.comment-info-text p {
 		margin: 0 0 1rem;
 		text-align: justify;
-		font-size: .9em;
+		font-size: 1em;
 	}
 	
 	#comment-container {
