adjustment to responsiveness

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -957,7 +957,7 @@ nav {
         width: 80%;
     }
 
-    .content-body{
+    .content-body, .content-body-minimal{
         width: 80%;
 
     }
@@ -1014,7 +1014,7 @@ nav {
         width: 100%;
     }
 
-    .content-body{
+    .content-body, .content-body-minimal{
         width: 100%;
 
     }
