--- a/_layouts/default_minimal.html
+++ b/_layouts/default_minimal.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6640999414600963"
+     crossorigin="anonymous"></script>
     <!-- Structured data -->
     {% if page.sd %}
 
